--- a/index.html
+++ b/index.html
@@ -7,32 +7,48 @@
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="/images/Logo header.svg"/>
-        </a>
-        <ul>
-
-        </ul>
+        <section>
+        <a href="./images/logo-header.svg">WEBSTUDIO</a>
+        <nav>
+          <ul>
+           <li>Studio</li>
+           <li>Portfolio</li>
+           <li>Contacts</li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111">+11 (000) 111-1</a>
+            </li>
+          </ul>
+        </address>
+        </section>
     </header>
     <main>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
     <section>
       <ul>
-        <h3>Strategy</h3>
-        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-      </ul>
-      <ul>
-        <h3>Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-      </ul>
-      <ul>
-        <h3>Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-      </ul>
-      <ul>
-        <h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <li>
+          <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </li>
       </ul>
     </section>
     <section>
@@ -40,34 +56,29 @@
     <ul>
       <li>
         <a href="">
-            <img src="/images/img 1.jpg" alt="Mark Guerrero"/>
+            <img src="./images/img01.jpg" width="264" height="260" alt="Mark Guerrero"/>
         </a>
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </li>
-    </ul>
-    <ul>
+      <li>
       <li>
         <a href="">
-            <img src="/images/img 2.jpg" alt="Tom Ford"/>
+            <img src="./images/img02.jpg" width="264" height="260" alt="Tom Ford"/>
         </a>
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
-    </ul>
-    <ul>
       <li>
         <a href="">
-            <img src="/images/img 3.jpg" alt="Camila Garcia"/>
+            <img src="./images/img03.jpg" width="264" height="260" alt="Camila Garcia"/>
         </a>
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
       </li>
-    </ul>
-    <ul>
       <li>
           <a href="">
-            <img src="/images/img 4.jpg" alt="Daniel Wilson"/>
+            <img src="./images/img04.jpg" width="264" height="260" alt="Daniel Wilson"/>
           </a>
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
@@ -76,9 +87,7 @@
     </section>
     </main>
     <footer>
-        <a href="">
-            <img src="/images/Logo footer.svg"/>
-        </a>
+        <a href="./images/logo-footer.svg">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
