--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
     <header>
-        <section>
         <a href="./images/logo-header.svg">WEBSTUDIO</a>
         <nav>
           <ul>
-           <li>Studio</li>
-           <li>Portfolio</li>
-           <li>Contacts</li>
+            <li>
+              <h4>Studio</h4>
+            </li>
+            <li>
+              <h4>Portfolio</h4>
+            </li>
+            <li>
+              <h4>Contacts</h4>
+            </li>
           </ul>
         </nav>
         <address>
@@ -26,7 +31,6 @@
             </li>
           </ul>
         </address>
-        </section>
     </header>
     <main>
         <h1>Effective Solutions for Your Business</h1>
