--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <header>
-        <a href="./images/logo-header.svg">WEBSTUDIO</a>
         <nav>
+        <a href="./index.html">WebStudio</a>
           <ul>
             <li>
-              <h4>Studio</h4>
+              <a href="">Studio</a>
             </li>
             <li>
-              <h4>Portfolio</h4>
+                <a href="">Portfolio</a>
             </li>
             <li>
-              <h4>Contacts</h4>
+                <a href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -27,15 +27,18 @@
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+110001111">+11 (000) 111-1</a>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
     </header>
     <main>
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
+      </section>
     <section>
+        <h2></h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -59,31 +62,23 @@
         <h2>Our Team</h2>
     <ul>
       <li>
-        <a href="">
             <img src="./images/img01.jpg" width="264" height="260" alt="Mark Guerrero"/>
-        </a>
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
       </li>
       <li>
       <li>
-        <a href="">
             <img src="./images/img02.jpg" width="264" height="260" alt="Tom Ford"/>
-        </a>
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
       <li>
-        <a href="">
             <img src="./images/img03.jpg" width="264" height="260" alt="Camila Garcia"/>
-        </a>
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
       </li>
       <li>
-          <a href="">
             <img src="./images/img04.jpg" width="264" height="260" alt="Daniel Wilson"/>
-          </a>
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
       </li>
@@ -91,7 +86,7 @@
     </section>
     </main>
     <footer>
-        <a href="./images/logo-footer.svg">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
